--- a/index.html
+++ b/index.html
@@ -81,12 +81,12 @@
 </span>
     </a>
     <br>
-	<strong>Sanket Kalwar*</strong>
-  <a href="https://dhruv2012.github.io/"><strong>Dhruv Patel*</strong></a>
-  <a href="https://dhruv2012.github.io/"><strong>Aakash Aanegola</strong></a>
-  <a href="https://dhruv2012.github.io/"><strong>Krishna Reddy Konda</strong></a>
-  <a href="https://dhruv2012.github.io/"><strong>Sourav Garg</strong></a>
-  <a href="https://dhruv2012.github.io/"><strong>K Madhava Krishna</strong></a>
+	<strong>Sanket Kalwar*</strong>,
+  <a href="https://dhruv2012.github.io/"><strong>Dhruv Patel*</strong></a>,
+  <a href="https://"><strong>Aakash Aanegola</strong></a>,
+  <a href="https://"><strong>Krishna Reddy Konda</strong></a>,
+  <a href="https://"><strong>Sourav Garg</strong></a>,
+  <a href="https://"><strong>K Madhava Krishna</strong></a>
     <br>
 	<em>Accepted at <b>ICRA</b><em>, 2023
     <br>
