--- a/index.html
+++ b/index.html
@@ -192,6 +192,8 @@
 </tbody></table>
 <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
 
+
+
 <tr onmouseout="difsurvey_stop()" onmouseover="difsurvey_start()">
   <td style="padding:20px;width:25%;vertical-align:middle">
     <div class="one">
@@ -271,6 +273,40 @@
 </tr>
 </tbody></table>
 <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+
+<tr onmouseout="difsurvey_stop()" onmouseover="difsurvey_start()">
+    <td style="padding:20px;width:25%;vertical-align:middle">
+      <div class="one">
+      <div class="two" id='difsurvey_image'><video  width=100% height=100% muted autoplay loop>
+      <source src="images/work_exp/rrc_logo" type="video/mp4">
+      Your browser does not support the video tag.
+      </video></div>
+        <img src='images/work_exp/rrc_logo.png' width="160">
+      </div>
+      <script type="text/javascript">
+        function difsurvey_start() {
+          document.getElementById('difsurvey_image').style.opacity = "1";
+        }
+  
+        function difsurvey_stop() {
+          document.getElementById('difsurvey_image').style.opacity = "0";
+        }
+        difsurvey_stop()
+      </script>
+    </td>
+    <td style="padding:20px;width:75%;vertical-align:middle">
+    <b>Robotics Research Center at IIIT, Hyderabad</b>
+      <br>
+      Research Assistant
+      <br>
+    <em>2022-2023<em>
+      <br>
+          <p></p>
+          <p>
+      
+      </p>
+    </td>
+</tr> 
 
 <tr onmouseout="difsurvey_stop()" onmouseover="difsurvey_start()">
     <td style="padding:20px;width:25%;vertical-align:middle">
