--- a/index.html
+++ b/index.html
@@ -52,6 +52,8 @@
           </tbody></table>
           <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
 
+          
+
 <tr onmouseout="difsurvey_stop()" onmouseover="difsurvey_start()">
   <td style="padding:20px;width:25%;vertical-align:middle">
     <div class="one">
@@ -86,7 +88,7 @@
   <a href="https://"><strong>Sourav Garg</strong></a>,
   <a href="https://"><strong>K Madhava Krishna</strong></a>
     <br>
-  <em>Submitted to <b>ICRA (Under Review!)</b><em>, 2024 (<b>Japan</b>)
+  <em>Submitted to <b>IROS (Under Review!)</b><em>, 2024 (<b>Abu Dhabhi</b>)
     <br>
         <a href="https://diffprompter.github.io/">project page</a> /
         <a href="https://github.com/DiffPrompter/diff-prompter">code</a>
@@ -96,7 +98,50 @@
     </p>
   </td>
 </tr>  
+<tr onmouseout="difsurvey_stop()" onmouseover="difsurvey_start()">
+  <td style="padding:20px;width:25%;vertical-align:middle">
+    <div class="one">
+    <div class="two" id='difsurvey_image'><video  width=100% height=100% muted autoplay loop>
+    <source src="images/cgdf/imgs" type="video/mp4">
+    Your browser does not support the video tag.
+    </video></div>
+      <img src='images/cgdf/imgs/teaser.png' width="190" height="180">
+    </div>
+    <script type="text/javascript">
+      function difsurvey_start() {
+        document.getElementById('difsurvey_image').style.opacity = "1";
+      }
 
+      function difsurvey_stop() {
+        document.getElementById('difsurvey_image').style.opacity = "0";
+      }
+      difsurvey_stop()
+    </script>
+  </td>
+  <td style="padding:20px;width:75%;vertical-align:middle">
+    <a href="https://arxiv.org/abs/2310.04181">
+      <span class="papertitle">Constrained 6-DoF Grasp Generation on Complex Shapes for Improved Dual-Arm Manipulation
+</span>
+    </a>
+    <br>
+    <a href="https://"><strong>Gaurav Singh*</strong></a>,
+  <strong>Sanket Kalwar*</strong></a>,
+  <a href="https://"><strong>Md Faizal Karim</strong></a>,
+  <a href="https://"><strong>Bipasha Sen</strong></a>,
+  <a href="https://"><strong>Nagamanikandan Govindan</strong></a>,
+  <a href="https://"><strong>Srinath Sridhar</strong></a>,
+  <a href="https://"><strong>K Madhava Krishna</strong></a>
+    <br>
+  <em>Submitted to <b>IROS (Under Review!)</b><em>, 2024 (<b>Abu Dhabhi</b>)
+    <br>
+        <a href="https://constrained-grasp-diffusion.github.io/">project page</a> /
+        <a href="https://constrained-grasp-diffusion.github.io/">code</a>
+        <p></p>
+        <p>
+    
+    </p>
+  </td>
+</tr>  
 <tr onmouseout="difsurvey_stop()" onmouseover="difsurvey_start()">
   <td style="padding:20px;width:25%;vertical-align:middle">
     <div class="one">
