--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 </p>
                 <p style="text-align:center">
                   <a href="k.sanket10000@gmail.com">Email</a> &nbsp;/&nbsp;
-                  <a href="https://drive.google.com/file/d/1oEltVEQVsE_PH9gcN4jkh6bbcusS1gqm/view?usp=sharing">CV</a> &nbsp;/&nbsp;
+                  <a href="https://drive.google.com/file/d/1VAMgEUUs-LeZuS_vjUxhJTtZ3AL8a5Jz/view?usp=sharing">CV</a> &nbsp;/&nbsp;
                   <a href="https://scholar.google.com/citations?user=Hlk6rlMAAAAJ&hl=en">Scholar</a> &nbsp;/&nbsp;
                   <a href="https://twitter.com/KalwarSanket">Twitter</a> &nbsp;/&nbsp;
                   <a href="https://github.com/sanketkalwar">Github</a>
@@ -119,7 +119,7 @@
     </script>
   </td>
   <td style="padding:20px;width:75%;vertical-align:middle">
-    <a href="https://arxiv.org/abs/2310.04181">
+    <a href="https://constrained-grasp-diffusion.github.io/">
       <span class="papertitle">Constrained 6-DoF Grasp Generation on Complex Shapes for Improved Dual-Arm Manipulation
 </span>
     </a>
@@ -264,7 +264,7 @@
     <br>
     MS student in Computer Science
     <br>
-	<em>2023-<b>present*</b><em>
+	<em>2022-<b>present*</b><em>
     <br>
         <p></p>
         <p>
