--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 </p>
                 <p style="text-align:center">
                   <a href="k.sanket10000@gmail.com">Email</a> &nbsp;/&nbsp;
-                  <a href="https://drive.google.com/file/d/1VAMgEUUs-LeZuS_vjUxhJTtZ3AL8a5Jz/view?usp=sharing">CV</a> &nbsp;/&nbsp;
+                  <a href=data/cv.pdf>CV</a> &nbsp;/&nbsp;
                   <a href="https://scholar.google.com/citations?user=Hlk6rlMAAAAJ&hl=en">Scholar</a> &nbsp;/&nbsp;
                   <a href="https://twitter.com/KalwarSanket">Twitter</a> &nbsp;/&nbsp;
                   <a href="https://github.com/sanketkalwar">Github</a>
