--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
   <a href="https://researchers.adelaide.edu.au/profile/sourav.garg"><strong>Sourav Garg</strong></a>,
   <a href="https://www.iiit.ac.in/people/faculty/mkrishna/"><strong>K Madhava Krishna</strong></a>
     <br>
-  <em>Submitted to <b>IROS (Under Review!)</b><em>, 2024 (<b>Abu Dhabhi</b>)
+  <em><b>arXiv,2024</b><em>
     <br>
         <a href="https://diffprompter.github.io/">project page</a> /
         <a href="https://github.com/DiffPrompter/diff-prompter">code</a>
@@ -132,7 +132,7 @@
   <a href="https://cs.brown.edu/people/ssrinath/"><strong>Srinath Sridhar</strong></a>,
   <a href="https://www.iiit.ac.in/people/faculty/mkrishna/"><strong>K Madhava Krishna</strong></a>
     <br>
-  <em>Submitted to <b>IROS (Under Review!)</b><em>, 2024 (<b>Abu Dhabhi</b>)
+  <em><b>arXiv,2024</b><em>
     <br>
         <a href="https://constrained-grasp-diffusion.github.io/">project page</a> /
         <a href="https://constrained-grasp-diffusion.github.io/">code</a>
