--- a/index.html
+++ b/index.html
@@ -54,6 +54,47 @@
 
           
 
+
+<tr onmouseout="difsurvey_stop()" onmouseover="difsurvey_start()">
+  <td style="padding:20px;width:25%;vertical-align:middle">
+    <div class="one">
+    <div class="two" id='difsurvey_image'><video  width=100% height=100% muted autoplay loop>
+    <source src="images/amt_hyp/teaser_amt_hyp" type="video/mp4">
+    Your browser does not support the video tag.
+    </video></div>
+      <img src='images/amt_hyp/amt_hyp.jpg' width="190" height="180">
+    </div>
+    <script type="text/javascript">
+      function difsurvey_start() {
+        document.getElementById('difsurvey_image').style.opacity = "1";
+      }
+
+      function difsurvey_stop() {
+        document.getElementById('difsurvey_image').style.opacity = "0";
+      }
+      difsurvey_stop()
+    </script>
+  </td>
+  <td style="padding:20px;width:75%;vertical-align:middle">
+    <a href="https://drive.google.com/file/d/1-xXnJbDyHg7-mYNGxoEfV-4KhBltmMBp/view?usp=sharing">
+      <span class="papertitle">AMT-Hyp : Adversarial Multi-Task Reinforcement Learning Framework for Policy Generation using Hypernetworks
+</span>
+    </a>
+    <br>
+  <strong>Sanket Kalwar*</strong>,
+  <a href="http://www.linkedin.com/in/jayaram6111997"><strong>Jayaram Reddy*</strong></a>,
+  <a href="https://sites.google.com/view/brojeshwar/home"><strong>Brojeshwar Bhowmick</strong></a>,
+  <a href="https://scholar.google.com/citations?user=0zgDoIEAAAAJ"><strong>Arun Singh</strong></a>,
+  <a href="https://www.iiit.ac.in/people/faculty/mkrishna/"><strong>K Madhava Krishna</strong></a>
+    
+    <br>
+        <a href="https://amt-hyp.github.io/">project page</a> /
+        <a href="https://github.com/AMT-Hyp/amt_hyp">code</a>
+    <br>
+        <em><b>Under Review!</b><em>
+  </td>
+</tr>
+
 <tr onmouseout="difsurvey_stop()" onmouseover="difsurvey_start()">
   <td style="padding:20px;width:25%;vertical-align:middle">
     <div class="one">
